--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Título de Pestaña -->
-    <title>Ventas</title>
+    <title>En venta</title>
         <!-- CSS -->
         <link rel="stylesheet" href="assets/css/estilos.css"/>
 
